syntax = "proto3";
option go_package = "./proto";

service UserService {
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
  rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message GetUsersResponse {
  repeated User users = 1;
}

message GetUserByIdRequest {
  int64 id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  string username = 2;
}

message UpdateUserResponse {
  User user = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}

message DeleteUserResponse {
  User user = 1;
}

message User {
  int64 id = 1;
  string username = 2;
  int64 created_at = 3;
}